--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@comunica/actor-init-sparql": "^3.1.0",
+    "@comunica/query-sparql": "^4.0.2",
+    "comunica": "^2.0.0",
     "n3": "^1.23.0",
     "next": "15.0.3",
     "primereact": "^10.8.4",
+    "rdflib": "^2.2.35",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "sparql-client-2": "^0.6.3"
   },
   "devDependencies": {
     "@types/node": "^20",
